@@ -1066,7 +1066,7 @@ int main
 		GNUNET_GETOPT_option_help(about),
 		GNUNET_GETOPT_option_uint('e',
 			"expiration",
-			NULL,
+			"TIME",
 			"expiration time of generated signature in seconds",
 			&gnunet_opt_sigexptime
 		),
@@ -1086,7 +1086,7 @@ int main
 		),
 		GNUNET_GETOPT_option_string('p',
 			"port",
-			NULL,
+			"STRING",
 			"GNUnet CADET port to listen/connect",
 			&gnunet_opt_port
 		),
@@ -1098,7 +1098,7 @@ int main
 		),
 		GNUNET_GETOPT_option_uint('w',
 			"wait",
-			NULL,
+			"TIME",
 			"minutes to wait until start of signature protocol",
 			&gnunet_opt_wait
 		),
