@@ -1,4 +1,5 @@
 * [2017-07-27] DKG-tools: added dkg-sign for creating detached signatures
+* [2017-07-27] DKG-tools: added option "-e" for expiration of keys and sigs
 * [2017-07-27] RFC4880: more interfaces for signatures changed or added
 * [2017-07-23] RFC4880: interface of Packet{Pub,Sec}Encode() changed 
 * [2017-07-22] RFC4880: interface of PacketS{ub,sb}Encode() changed for DSA
